# autoware.universe

.github/workflows/: build-and-test-differential.yaml
common/autoware_point_types/: CMakeLists.txt
latest/: sitemap.xml
launch/tier4_sensing_launch/launch/: sensing.launch.xml
localization/ndt_scan_matcher/src/: ndt_scan_matcher_core.cpp
main/: sitemap.xml
map/map_loader/: CMakeLists.txt  package.xml
map/map_loader/src/pointcloud_map_loader/: pointcloud_map_loader_module.cpp
sensing/autoware_driveworks_gmsl_interface_ros2/: CMakeLists.txt  package.xml
sensing/autoware_driveworks_gmsl_interface_ros2/src/: gmsl_node.cpp
sensing/autoware_driveworks_interface/: CMakeLists.txt  interface.yaml  package.xml
sensing/autoware_driveworks_interface/include/autoware_driveworks_interface/: gmsl_interface.hpp
sensing/autoware_driveworks_interface/src/: gmsl_interface.cpp  gmsl_interface_node.cpp
sensing/autoware_driveworks_interface_ros2/: CMakeLists.txt  package.xml
sensing/autoware_driveworks_interface_ros2/src/: gmsl_interface.cpp
sensing/autoware_msgs/: CMakeLists.txt  package.xml
sensing/autoware_msgs/msg/: CameraExtrinsic.msg  ColorSet.msg  ExtractedPosition.msg  SyncTimeDiff.msg  TunedResult.msg
sensing/jsk_footstep_msgs/: CMakeLists.txt  package.xml
sensing/jsk_footstep_msgs/msg/: Footstep.msg  FootstepArray.msg
sensing/jsk_recognition_msgs/: CMakeLists.txt  package.xml
sensing/jsk_recognition_msgs/msg/: ExifTags.msg  HandPoseArray.msg  SnapItRequest.msg  SparseImage.msg
sensing/pointcloud_preprocessor/: CMakeLists.txt  package.xml
