<?xml version="1.0"?>
<package format="3">
  <name>autoware_msgs</name>
  <version>1.14.0</version>
  <description>The autoware_msgs package</description>
  <maintainer email="yusuke.fujii@tier4.jp">Yusuke Fujii</maintainer>
  <license>Apache 2</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

 
  <build_depend>geometry_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend> 


  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
