<?xml version="1.0"?>
<package format="3">
  <name>jsk_footstep_msgs</name>
  <version>4.3.2</version>
  <description>jsk_footstep_msgs</description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>geometry_msgs</exec_depend> 
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

<member_of_group>rosidl_interface_packages</member_of_group>

</package>
