<?xml version="1.0"?>
<package format="3">
  <name>jsk_recognition_msgs</name>
  <version>1.2.15</version>
  <description>ma</description>

  <maintainer email="rche0051@student.monash.edu">robin</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>pcl_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>jsk_footstep_msgs</build_depend>


  <exec_depend>pcl_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>jsk_footstep_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  
  <test_depend>rostest</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
